Adaptive length for imperial units no longer working properly. Entered as meters rather than feet. #60327

Closed
opened 2019-01-08 18:03:32 +01:00 by Richard Payne · 3 comments

System Information
Operating system: Windows 10 Pro
Graphics card: Nvidia Geforce 970M

Blender Version
Broken: 2.8 beta Date: 2019-01-07 23:37 Hash: 91a155833e Branch: Blender2.7
(example: 2.79b release)
(example: 2.80, edbf15d3c0, blender2.8, 2018-11-28, as found on the splash screen)
Worked: (optional)

Short description of error
Setting length to adaptive results in units entered in meters rather than feet.

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).
Create a cube. Change units to imperial and select adaptive for length. Type a number into the dimensions for the cube and hit enter. The cube dimension will be changed by the number you enter x meters rather than feet as in 2.79b and the earlier builds of 2.8. The same thing happens in bevel width and array constant offset so I assume it's global to a dimensions.
I don't remember when it first changed since I've been working on a 2.79 project for around 10 days.
This bug is extremely inconvenient since changing to feet rather than adaptive shows feet in all length related such as the bevel width.

**System Information** Operating system: Windows 10 Pro Graphics card: Nvidia Geforce 970M **Blender Version** Broken: 2.8 beta Date: 2019-01-07 23:37 Hash: 91a155833e59 Branch: Blender2.7 (example: 2.79b release) (example: 2.80, edbf15d3c044, blender2.8, 2018-11-28, as found on the splash screen) Worked: (optional) **Short description of error** Setting length to adaptive results in units entered in meters rather than feet. **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible). Create a cube. Change units to imperial and select adaptive for length. Type a number into the dimensions for the cube and hit enter. The cube dimension will be changed by the number you enter x meters rather than feet as in 2.79b and the earlier builds of 2.8. The same thing happens in bevel width and array constant offset so I assume it's global to a dimensions. I don't remember when it first changed since I've been working on a 2.79 project for around 10 days. This bug is extremely inconvenient since changing to feet rather than adaptive shows feet in all length related such as the bevel width.
Author

Added subscriber: @RichardPayne

Added subscriber: @RichardPayne
Jacques Lucke self-assigned this 2019-01-08 18:10:42 +01:00

This issue was referenced by 12e9d52882

This issue was referenced by 12e9d52882e32d85c3890b73aa5a21aff9c787fc
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60327
No description provided.