Fix T60327: Value input with adaptive imperial units not working properly